[metadata]
description-file=README.md
license_files=LICENSE.txt

[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = Gilad Senderovich
author_email = giladsnd@gmail.com
description = Thereshold Picker for Binary Classifiers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gsend/ThersholdPicker.git
project_urls =
    Bug Tracker = https://github.com/Gsend/ThersholdPicker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src